@@ -67,6 +67,7 @@ te:Telugu
 th:Thai
 tr:Turkish
 uk:Ukrainian
+vi:Vietnamese
 zh-hans:Simplified Chinese
 zh-hant:Traditional Chinese
 zu:Zulu
