@@ -73,6 +73,7 @@ te:te
 th:th
 tr:tr
 uk:uk
+vi:vi
 zh-CN:zh-hans
 zh-TW:zh-hant
 zu:zu
