@@ -1,0 +1,79 @@
+en-US:amazondotcom,bing,eBay,google,twitter,wikipedia,yahoo
+af:amazondotcom,bing,eBay,google,wikipedia-af
+ar:google,bing,yahoo,wikipedia-ar,amazondotcom,eBay
+ast:google,bing,yahoo-es,eBay-es,wikipedia-ast,diccionariu-alla
+be:google,yahoo,be.wikipedia.org,be-x-old.wikipedia.org,ru.wikipedia.org-be,tut.by,yandex.ru-be
+bg:911bg,amazondotcom,diribg,google,pe-bg,portalbgdict,wikipedia-bg
+bn-BD:bing,google,wikipedia-bn,yahoo
+bn-IN:amazondotcom,eBay-in,google,yahoo-in,rediff,technorati,wikipedia-bn,bing
+br:amazon-france,freelang,google,klask,wikipedia-br,yahoo-france
+bs:amazondotcom,answers,creativecommons,eBay,google,wikipedia,yahoo
+ca:google,bing,huubs,diec2,wikipedia-ca,llibres
+cs:google,heureka-cz,jyxo-cz,seznam-cz,slunecnice-cz,wikipedia-cz
+cy:amazon-en-GB,creativecommons,eBay-en-GB,google,palasprint,termau,wikipedia-cy,yahoo-en-GB
+da:amazon-co-uk,bing,eBay,google,wikipedia-da
+de:google,yahoo-de,bing,amazondotcom-de,eBay-de,wikipedia-de,leo_ende_de
+el:google,amazon-en-GB,bing,eBay-en-GB,yahoo,wikipedia-el
+en-GB:amazon-en-GB,bing,chambers-en-GB,eBay-en-GB,google,wikipedia,yahoo-en-GB
+en-ZA:amazondotcom,bing,eBay,google,wikipedia,yahoo
+eo:amazondotcom,bing,eBay,google,twitter,wikipedia,yahoo
+es-AR:google,yahoo-ar,amazondotcom,mercadolibre-ar,creativecommons,drae,wikipedia-es
+es-CL:google,bing,wikipedia-es,mercadolibre-cl,yahoo-cl,drae
+es-ES:google,yahoo-es,bing,drae,twitter,eBay-es,wikipedia-es
+es-MX:google,yahoo-mx,bing,wikipedia-es,mercadolibre-mx
+et:eBay,google,neti-ee,osta-ee,eki-ee,wikipedia-et
+eu:amazon-en-GB,bing,creativecommons,elebila,eBay-es,google,yahoo,wikipedia-eu
+fa:amazondotcom,answers,bing,google,yahoo,wikipedia-fa
+fi:bing,bookplus-fi,google,eBay-fi,wikipedia-fi,yahoo-fi
+fr:google,amazon-france,bing,wikipedia-fr,eBay-france,yahoo-france,cnrtl-tlfi-fr
+fy-NL:google,bing,bolcom-fy-NL,marktplaats-fy-NL,wikipedia-fy-NL,yahoo-fy-NL
+ga-IE:google,yahoo-en-GB,amazon-en-GB,eBay-en-GB,answers,creativecommons,focal,wikipedia-ga-IE
+gd:google,yahoo-en-GB,bbc-alba,amazon-en-GB,faclair-beag,wikipedia-gd
+gl:amazon-en-GB,creativecommons,eBay-es,google,wikipedia-gl,yahoo-es
+gu-IN:eBay-in,google,gujaratilexicon,wikipedia-gu,yahoo-in,bing
+he:google,yahoo,wikipedia-he,morfix-dic
+hi-IN:google,yahoo-in,bing,wikipedia-hi,eBay-in
+hr:amazon-en-GB,bing,eBay-en-GB,eudict,google,wikipedia-hr,yahoo
+hu:creativecommons,eBay-hu,google,sztaki-en-hu,vatera,wikipedia-hu
+hy-AM:amazondotcom,answers,creativecommons,eBay,google,wikipedia,yahoo
+id:google,yahoo-id,wikipedia-id
+is:amazondotcom,bing,eBay,google,leit-is,wikipedia-is,yahoo
+it:amazon-it,bing,eBay-it,google,hoepli,wikipedia-it,yahoo-it
+ja:google-jp,yahoo-jp,amazon-jp,rakuten,yahoo-jp-auctions,oshiete-goo,wikipedia-ja
+kk:creativecommons,google,wikipedia-kk,yandex
+kn:amazondotcom,google,bing,wikipedia-kn,yahoo-in,kannadastore
+ko:yahoo-kr,google,daum-kr,naver-kr,wikipedia-kr,danawa-kr
+ku:amazondotcom,answers,creativecommons,eBay,google-ku,wikipedia-ku,yahoo
+lg:amazondotcom,bing,eBay,google,wikipedia,yahoo
+lt:amazondotcom,bing,eBay,google,twitter,wikipedia-lt
+lv:google,yahoo,salidzinilv,wikipedia-lv,dict-enlv,sslv
+mai:google,yahoo-in,bing,wikipedia-hi,eBay-in
+mk:amazondotcom,bing,answers,creativecommons,eBay,google,yahoo,wikipedia-mk
+ml:google,bing,rediff,eBay-in,wikipedia,wikipedia-ml,webdunia
+mr:google,amazondotcom,eBay-in,yahoo-in,creativecommons,wikipedia-mr,rediff
+nb-NO:amazon-en-GB,bing,bok-NO,google,qxl-NO,telefonkatalogen-NO,wikipedia-NO,yahoo-NO
+nl:google,bing,bolcom-nl,wikipedia-nl,marktplaats-nl
+nn-NO:amazon-en-GB,bing,bok-NO,google,qxl-NO,telefonkatalogen-NO,wikipedia-NN
+nso:amazondotcom,bing,eBay,google,wikipedia,yahoo
+or:google,amazondotcom,bing,eBay-in,yahoo-in,wikipedia-or
+pa-IN:google,yahoo-in,eBay-in,wikipedia-pa,bing
+pl:google,wp-pl,allegro-pl,wikipedia-pl,pwn-pl,merlin-pl,fbc-pl
+pt-BR:google,yahoo-br,wikipedia-br,mercadolivre,buscape
+pt-PT:google,sapo,priberam,wikipedia-ptpt,amazon-en-GB,
+ro:amazondotcom,bing,eBay,google,twitter,wikipedia,yahoo
+ru:google,mailru,ozonru,priceru,wikipedia-ru,yandex-slovari,yandex
+si:amazondotcom,answers,creativecommons,eBay,google,wikipedia-si,yahoo
+sk:google,azet-sk,atlas-sk,dunaj-sk,eBay,slovnik-sk,zoznam-sk,wikipedia-sk
+sl:najdi-si,ceneji,google,odpiralni,twitter,wikipedia-sl
+sq:amazon-en-GB,bing,eBay,google,wikipedia-sq,yahoo
+sr:google,bing,pogodakyu,eBay-en-GB,amazon-en-GB,vokabular,wikipedia-sr
+sv-SE:allaannonser-sv-SE,bing,google,prisjakt-sv-SE,tyda-sv-SE,wikipedia-sv-SE,yahoo-sv-SE
+ta:creativecommons,eBay-in,google,wikipedia-ta,yahoo-in
+te:amazondotcom,creativecommons,eBay-in,google,yahoo-in,wikipedia-te,wiktionary-te
+th:amazondotcom,bing,creativecommons,eBay,google,longdo,wikipedia-th,yahoo
+tr:google,yandex-tr,wikipedia-tr,amazondotcom,eBay
+uk:google,yandex,meta-ua,metamarket,wikipedia-uk
+vi:5giay,baambootratuav,creativecommons,google,muare,wikipedia-vi,zing-mp3
+zh-CN:amazondotcn,creativecommons,eachnet,google,baidu,baiduzhidao,paipai,wikipedia-zh-CN,bing
+zh-TW:google,yahoo-zh-TW,yahoo-answer-zh-TW,yahoo-bid-zh-TW,findbook-zh-TW,creativecommons,wikipedia-zh-TW
+zu:google,amazondotcom,eBay,yahoo,creativecommons,answers
